--- a/app/src/main/res/drawable/ic_line.xml
+++ b/app/src/main/res/drawable/ic_line.xml
@@ -1,3 +1,10 @@
+<!--
+  ~ Created by Inuwa Ibrahim on 17/03/2022, 7:43 PM
+  ~     https://linktr.ee/Ibrajix
+  ~     Copyright (c) 2022.
+  ~     All rights reserved.
+  -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="365dp"
     android:height="29dp"
