--- a/app/src/main/res/layout/rcv_lyt_top_picks.xml
+++ b/app/src/main/res/layout/rcv_lyt_top_picks.xml
@@ -14,12 +14,14 @@
 
     <ImageView
         android:id="@+id/img_top_picks"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:contentDescription="@string/nft_intro_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
