--- a/app/src/main/res/layout/rcv_lyt_trending.xml
+++ b/app/src/main/res/layout/rcv_lyt_trending.xml
@@ -11,7 +11,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:padding="8dp"
     android:id="@+id/topNftContainer"
     android:background="@color/main_bg">
 
